feat: empty column filter forbids all collections